--- a/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
+++ b/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
@@ -52,8 +52,10 @@
   @media print {
     background: #ffffff;
     border-bottom: 2px solid #e0e0e0;
-    padding: 0 0 30px 0;
-    margin-bottom: 30px;
+    padding: 15px 0;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -62,6 +64,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 24px;
+  width: 100%;
 
   @include mixins.respond-below(sm) {
     flex-direction: column;
