--- a/frontend/src/components/layouts/Checkout/CheckoutFooter/CheckoutFooter.module.scss
+++ b/frontend/src/components/layouts/Checkout/CheckoutFooter/CheckoutFooter.module.scss
@@ -52,6 +52,7 @@
       margin-top: 20px;
       flex: 1;
       max-width: 700px;
+      background-color: #0E0CFF;
     }
 
     .continueButton {
