--- a/frontend/src/components/routes/product-widget/OrderSummaryAndProducts/OrderSummaryAndProducts.module.scss
+++ b/frontend/src/components/routes/product-widget/OrderSummaryAndProducts/OrderSummaryAndProducts.module.scss
@@ -8,7 +8,7 @@
 }
 
 .actionBar {
-  background-color: #800080;
+  background-color: #0E0CFF;
   padding: var(--hi-spacing-md);
   color: #fff;
 }
@@ -27,7 +27,7 @@
   padding: var(--hi-spacing-lg);
   border-radius: var(--hi-radius-lg);
   background-color: #fff9ff;
-  border: 1px solid #800080;
+  border: 1px solid #0E0CFF;
 }
 
 .detailItem {
