--- a/frontend/src/components/common/TanStackTable/TanStackTable.module.scss
+++ b/frontend/src/components/common/TanStackTable/TanStackTable.module.scss
@@ -33,11 +33,16 @@
 }
 
 .table {
-  tr td,
-  tr,
   th {
-    padding: 15px !important;
     white-space: nowrap;
+  }
+
+  tbody tr {
+
+    td {
+      padding: 20px !important;
+      white-space: nowrap;
+    }
   }
 
   position: relative;
