Feature: Checkout UI Improvements

--- a/frontend/src/components/common/QuestionsTable/QuestionsTable.module.scss
+++ b/frontend/src/components/common/QuestionsTable/QuestionsTable.module.scss
@@ -66,6 +66,12 @@
             width: 100%;
             height: 100%;
           }
+
+          .perOrderNote {
+            color: var(--mantine-color-dimmed);
+            font-style: italic;
+            margin: 10px 0;
+          }
         }
       }
     }
