--- a/frontend/src/components/common/Card/Card.module.scss
+++ b/frontend/src/components/common/Card/Card.module.scss
@@ -14,8 +14,9 @@
   }
 
   &.default {
-    box-shadow: 0 3px 0 #dddddd;
-    border: 1px solid #e3e3e3;
     background-color: #FFFFFF;
+    border: 1px solid #E5E7EB;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04), 0 1px 2px rgba(0, 0, 0, 0.02);
+    transition: box-shadow 0.15s ease;
   }
 }
