--- a/frontend/src/components/layouts/Checkout/CheckoutContent/CheckoutContent.module.scss
+++ b/frontend/src/components/layouts/Checkout/CheckoutContent/CheckoutContent.module.scss
@@ -2,31 +2,19 @@
 
 .main {
   position: relative;
-  height: calc(100vh - 123px);
+  min-height: calc(100vh - 60px);
+  height: auto;
   overflow-y: auto;
-  padding: 20px 60px;
+  padding: 20px 60px 40px;
 
   @include mixins.scrollbar();
 
-  &.hasFooter {
-    height: calc(100vh - 60px);
-
-    @include mixins.respond-below(md) {
-      height: calc(100vh - 110px);
-    }
-  }
-
   @include mixins.respond-below(md) {
-    padding: 20px;
+    padding: 20px 20px 40px;
   }
 
   .innerContainer {
     max-width: 700px;
     margin: 0 auto;
   }
-}
-
-.footer {
-  height: 100px;
-  background-color: #ffffff;
 }
